--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "react-native-simple-image-cropper",
-  "version": "4.0.0-beta-1",
+  "version": "4.0.0-beta-2",
   "description": "",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "yarn tsc --watch",
     "build": "rm -rf ./build/* && tsc",
