--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-simple-image-cropper",
-  "version": "4.0.0-beta-2",
+  "version": "4.0.1",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
@@ -48,7 +48,7 @@
     "react-native-image-resizer": "^1.2.2",
     "react-native-image-rotate": "https://github.com/barrsan/react-native-image-rotate",
     "react-native-image-size": "^1.1.3",
-    "react-native-reanimated": "^1.8.0",
+    "react-native-reanimated": "^2.14.3",
     "react-native-redash": "^12.0.2",
     "typescript": "^3.8.3"
   }
